--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-tree.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-tree.html
@@ -1,13 +1,10 @@
 <link rel="import" href="../../polymer/polymer.html" />
-<link rel="import" href="../../core-icon/core-icon.html" />
-<link rel="import" href="../../core-icon-button/core-icon-button.html" />
 <link rel="import" href="juicy-toggle-icon-button.html" />
-<!-- load default set -->
-<link rel="import" href="../../core-icons/core-icons.html" />
 <link rel="import" href="juicy-draggable.html" />
 
 <polymer-element name="juicy-tile-tree" attributes="tree">
     <template>
+        <link href="css/jte-fontawesome.css" rel="stylesheet" />
         <style>
             :host {
                 overflow: auto;
@@ -54,7 +51,7 @@
                 white-space: nowrap;
             }
 
-            core-icon-button, juicy-toggle-icon-button {
+            i.jte-icon, juicy-toggle-icon-button {
                 line-height: 1em;
             }
             
@@ -62,17 +59,6 @@
                 position: absolute;
                 top: 6px;
                 left: -17px;
-            }
-
-            core-icon[role=img] {
-                height: 1em;
-                width: 1em;
-                padding: 1px;
-            }
-
-            juicy-toggle-icon-button /deep/ core-icon[role=img] {
-                height: 1em;
-                width: 1em;
             }
 
             .blurred {
@@ -97,10 +83,8 @@
                 /*cursor: move;*/
             }
 
-            .drop-folder.drag-hover {
+            .drop-item.drag-hover {
                 background-color: #bdf337;
-                padding: 5px;
-                margin: -5px 0px -5px -5px;
                 color: #404040;
             }
 
@@ -142,7 +126,7 @@
                 border-color: white;
             }
 
-            core-icon ~ .item-name {
+            i.jte-icon ~ .item-name {
                 width: calc(100% - 16px);
             }
 
@@ -234,7 +218,7 @@
         </template>
         <template id="item-visibility">
             <template if="{{editItem != item}}">
-                <juicy-toggle-icon-button class="visibility" on-tap="{{ refreshTileList }}" iconoff="visibility" iconon="visibility-off" checked="{{item.hidden}}"></juicy-toggle-icon-button>
+                <juicy-toggle-icon-button class="visibility" on-click="{{ refreshTileList }}" iconoff="jte-icon-eye" iconon="jte-icon-eye-off" checked="{{item.hidden}}" value="{{item.itemName}}"></juicy-toggle-icon-button>
             </template>
         </template>
         <ul id="root">
@@ -242,9 +226,9 @@
                 <!-- branch -->
                 <li class="{{ {collapsed: collapsed[toRootName(branch.node)]} | tokenList}}">
                     <div class="{{ branch | getBranchClassName }}" on-mouseover="{{hoverAction}}" on-mouseout="{{blurAction}}" title="{{ toRootName(branch.node) }}">
-                        <juicy-toggle-icon-button class="expand" iconon="chevron-right" iconoff="expand-more" checked="{{collapsed[toRootName(branch.node)]}}"></juicy-toggle-icon-button>
+                        <juicy-toggle-icon-button class="expand" iconon="jte-icon-angle-right" iconoff="jte-icon-angle-down" checked="{{collapsed[toRootName(branch.node)]}}"></juicy-toggle-icon-button>
                         <div on-tap="{{tapAction}}" class="txt">
-                            <core-icon icon="view-quilt" title="juicy-tile-list"></core-icon>
+                            <i class="jte-icon jte-icon-th-large" title="juicy-tile-list"></i>
                             <input type="text" class="item-name {{ {active: editBranch == branch} | tokenList}}" readonly?="{{editBranch != branch}}" value="{{ branch.node.setup.itemName }}"
                                    on-dblclick="{{branchNameDblclickAction}}" on-blur="{{nameBlurAction}}" on-keypress="{{nameKeypressAction}}" />
                         </div>
@@ -255,12 +239,11 @@
                             <li class="drop {{ {collapsed: collapsed[item.id]} | tokenList}}">
                                 <template if="{{ item.items }}">
                                     <!-- group -->
-                                    <div class="{{ item | getBranchClassName }}" on-mouseover="{{hoverAction}}" on-mouseout="{{blurAction}}" title="{{item.id}}">
-                                        <juicy-toggle-icon-button class="expand" iconon="chevron-right" iconoff="expand-more" checked="{{collapsed[item.id]}}"></juicy-toggle-icon-button>
+                                    <div class="drop-item {{ item | getBranchClassName }}" on-mouseover="{{hoverAction}}" on-mouseout="{{blurAction}}" title="{{item.id}}">
+                                        <juicy-toggle-icon-button class="expand" iconon="jte-icon-angle-right" iconoff="jte-icon-angle-down" checked="{{collapsed[item.id]}}"></juicy-toggle-icon-button>
                                         <template bind ref="item-visibility"></template>
-                                        <juicy-draggable on-juicy-draggable-stop="{{ itemDragStop }}" position="static" dropselector="html /deep/ ul.branch li .drop-folder" disabled?="{{editItem == item}}">
+                                        <juicy-draggable on-juicy-draggable-stop="{{ itemDragStop }}" position="static" dropselector="html /deep/ ul.branch li .drop-item" disabled?="{{editItem == item}}">
                                             <div on-tap="{{tapAction}}" class="txt">
-                                                <core-icon class="drop-folder" icon="folder" title="group"></core-icon>
                                                 <template bind ref="item-name"></template>
                                             </div>
                                         </juicy-draggable>
@@ -277,7 +260,7 @@
                                         <!-- without nested juicy-tile-list -->
                                         <div class="{{ item | getBranchClassName }}" on-mouseover="{{hoverAction}}" on-mouseout="{{blurAction}}" title="{{item.id}}">
                                             <template bind ref="item-visibility"></template>
-                                            <juicy-draggable on-juicy-draggable-stop="{{ itemDragStop }}" position="static" dropselector="html /deep/ ul.branch li .drop-folder" disabled?="{{editItem == item}}">
+                                            <juicy-draggable on-juicy-draggable-stop="{{ itemDragStop }}" position="static" dropselector="html /deep/ ul.branch li .drop-item" disabled?="{{editItem == item}}">
                                                 <div on-tap="{{tapAction}}" class="txt">
                                                     <template bind ref="item-name">
                                                     </template>
@@ -288,9 +271,9 @@
                                     <template if="{{ branch.branches[ item.id ] }}">
                                         <!-- with nested juicy-tile-list -->
                                         <div class="{{ item | getBranchClassName }}" on-mouseover="{{hoverAction}}" on-mouseout="{{blurAction}}" title="{{item.id}}">
-                                            <juicy-toggle-icon-button class="expand" iconon="chevron-right" iconoff="expand-more" checked="{{collapsed[item.id]}}"></juicy-toggle-icon-button>
+                                            <juicy-toggle-icon-button class="expand" iconon="jte-icon-angle-right" iconoff="jte-icon-angle-down" checked="{{collapsed[item.id]}}"></juicy-toggle-icon-button>
                                             <template bind ref="item-visibility"></template>
-                                            <juicy-draggable on-juicy-draggable-stop="{{ itemDragStop }}" position="static" dropselector="html /deep/ ul.branch li .drop-folder" disabled?="{{editItem == item}}">
+                                            <juicy-draggable on-juicy-draggable-stop="{{ itemDragStop }}" position="static" dropselector="html /deep/ ul.branch li .drop-item" disabled?="{{editItem == item}}">
                                                 <div on-tap="{{tapAction}}" class="txt">
                                                     <template bind ref="item-name"></template>
                                                 </div>
